[workspace]
members = ["derive"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["m00n"]
license = "MPL-2.0"
homepage = "https://github.com/m00nwtchr/runesys"
repository = "https://github.com/m00nwtchr/runesys.git"

[package]
name = "runesys"
description = "Framework for my microservices projects."
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "http"
required-features = ["http"]

[features]
default = ["derive", "tracing", "telemetry", "grpc"]
derive = ["dep:runesys_derive"]
# Optional capability toggles
common = ["dep:axum", "dep:tower", "dep:tower-http"]
http = ["common"]
grpc = [
	"common",
	"dep:tonic",
	"dep:tonic-health",
	"dep:tonic-reflection",
	"dep:prost",
	"dep:prost-types"
]
tracing = ["dep:tracing-subscriber", "tower-http/trace"]
telemetry = [
	"tracing",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry-semantic-conventions"
]
cache = ["dep:redis", "dep:serde_json"]
db = ["dep:sqlx"]

[dependencies]
runesys_derive = { path = "derive", optional = true }
# ───── Core Dependencies ─────
thiserror = "2"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "v5"] }

# ───── Config / Serialization ─────
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
url = { version = "2.5", features = ["serde"] }

# ───── Axum / HTTP / Tower ─────
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", default-features = false, features = ["add-extension"], optional = true }

# ───── Tonic / gRPC ─────
tonic = { version = "0.13", optional = true }
tonic-health = { version = "0.13", optional = true }
tonic-reflection = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

# ───── Tracing / Telemetry ─────
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
tracing-opentelemetry = { version = "0.30", optional = true }
opentelemetry = { version = "0.29", optional = true, default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.29", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", optional = true, default-features = false, features = ["trace", "logs", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"], optional = true }

# ───── Database / Redis ─────
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.31", optional = true }
